Ignore any ajp13 flush messages which we may mistakenly rec' before we send the response headers. See Tomcat PR 43478.

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@579707 13f79535-47bb-0310-9956-ffa450edef68